# fidogate-ds-sta

./: ChangeLog  Changes.ru  Makefile.am  Makefile.in  TODO.rus  acconfig.h  config.h.in  config.pl  configure  configure.in  version.h
doc/: FAQ.ru  FAQ_Config.ru  FIDOGATE+tracker.ru  Makefile.am  Makefile.in  README  README.ru
doc/examples/: README
doc/examples/dyff/: acl.sample  aliases.sample  areas.sample  fidogate.conf.sample.in  ftnacl.sample  hosts.sample  packing.sample.in  passwd.sample  routing.sample
doc/examples/point/: fidogate.conf.in  packing  routing
doc/examples/rpm/: aliases  fidogate.conf  packing  passwd  routing
doc/examples/snp/: fidogate.conf
doc/examples/win32/: README.WIN32  aliases  config.make  fidogate.conf  passwd
doc/mailer/sendmail/: README.FIDOGATE
doc/mailer/sendmail/cf/: mkmaildb  morannon-check.mc  morannon.mc  mrbl.p3  orodruin-check.mc  orodruin-smtp.mc  orodruin.mc  point.mc  redhat6-morannon.mc  redhat6-orodruin.mc
doc/mailer/sendmail/mailer/: ftn.m4.in
doc/man/: parsedate.3
doc/old/: FAQ_fidogate  FIDOGATE_ftrack  dirs.html  fidogate.texi  info2txt.pl  msgid.doc  texinfo.tex
scripts/: Makefile.am  Makefile.in
scripts/areas/: Makefile.am  Makefile.in  areasbbssync.in  areassucksync.in
scripts/filebase/: fb-filelist.in
scripts/maintenance/: Makefile.am  Makefile.in  logcheck.in  logdaily.in  logreport.in  logsendmail.in  logstat.in  rc.fidogate.in
scripts/misc/: Makefile.am  Makefile.in  hosts2dns.in  recvuu.in  senduu.in  senduumail.in
scripts/nodelist/: Makefile.am  Makefile.in  html-tmpl.in  nl-2routing.in  nl-del.in  nl-html.in
scripts/outbound/: Makefile.am  Makefile.in  out-freq.in  out-ls.in  out-manip.in  out-rm0.in  out-rmbsy.in  outb-kill.in  outb.in
scripts/www/: gate.cgi.in
src/: HEAD  Makefile.am  Makefile.in
src/areafix/: Makefile.am  Makefile.in  areafix.c  ftnaf.c  ftnafmail.c  ftnafpkt.c  ftnafutil.c  mailer.c  pkttmpl.c
src/charset/: Makefile.am  Makefile.in  charset.map  charsetc.c  cyrillic.map  russian.map
src/common/: Makefile.am  Makefile.in  acl.c  acl_ftn.c  active.c  address.c  aliases.c  areas.c  areasbbs.c  binkley.c  bounce.c  charset.c  config.c  crc16.c  crc32.c  date.c  dir.c  file.c  flo.c  fopen.c  ftnaddr.c  gettime.c  histdb.c  hosts.c  kludge.c  lock.c  log.c  mail.c  message.c  mime.c  misc.c  msgid.c  node.c  outpkt.c  packet.c  parsedate.3  parsedate.y  parsenode.c  passwd.c  read.c  (+13 more)
src/gate/: Makefile.am  Makefile.in  ftn2rfc.c  ftnin.c  ftninpost.c  ftninrecomb.in  ftnmail.c  ftnnews.c  rfc2ftn.c  send-fidogate.in
src/include/: Makefile.am  Makefile.in  declare.h  fidogate.h  node.h  packet.h  prototypes.h  structs.h
src/tick/: Makefile.am  Makefile.in  ftnhatch.c  ftntick.c  ftntickpost.in
src/toss/: Makefile.am  Makefile.in  ftn2ftn.c  ftnexpire.c  ftnpack.c  ftnroute.c  ftntoss.c  history.c  ngoper.c  report_traffic.in  runinc.c
src/util/: Makefile.am  Makefile.in  confval.c  ftnfattach.c  ftnflo.c  ftnoutpkt.c  pktdebug.c  pktmore.in  sumcrc.c
